# shml

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py
examples/: run_preprocessing.py
