[metadata]
name = shml
description = lightweight pdata cleaning/processing/plotting/ML training library for use with an ATLAS BSM dihiggs search
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phinate/shml
author = Nathan Simpson
author_email = n.s@cern.ch
maintainer = Nathan Simpson
maintainer_email = n.s@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://shml.readthedocs.io/
    Bug Tracker = https://github.com/phinate/shml/issues
    Discussions = https://github.com/phinate/shml/discussions
    Changelog = https://github.com/phinate/shml/releases

[options]
packages = find:
install_requires =
    typing_extensions>=3.7;python_version<'3.8'
    awkward>=1.5.1
    uproot>=4.1.8
    pyarrow>=6.0.0
    pre-commit
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
ml =
    pytorch-lightning>=1.5
    matplotlib
    jax
    jaxlib
dev =
    pytest>=6
docs =
    Sphinx~=3.0
    myst_parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx_copybutton
test =
    pytest>=6

[flake8]
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
